--- a/notebook/baseline.ipynb
+++ b/notebook/baseline.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -309,9 +309,24 @@
       "[210]\ttraining's auc: 0.862062\tvalid_1's auc: 0.700703\n",
       "[220]\ttraining's auc: 0.866174\tvalid_1's auc: 0.700707\n",
       "Early stopping, best iteration is:\n",
-      "[125]\ttraining's auc: 0.819763\tvalid_1's auc: 0.703428\n",
-      "TEST_AUC=0.5587379464277206\n"
+      "[125]\ttraining's auc: 0.819763\tvalid_1's auc: 0.703428\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LGBMClassifier(metric=&#x27;auc&#x27;, n_estimators=10000, objective=&#x27;binary&#x27;,\n",
+       "               random_state=74)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LGBMClassifier</label><div class=\"sk-toggleable__content\"><pre>LGBMClassifier(metric=&#x27;auc&#x27;, n_estimators=10000, objective=&#x27;binary&#x27;,\n",
+       "               random_state=74)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LGBMClassifier(metric='auc', n_estimators=10000, objective='binary',\n",
+       "               random_state=74)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -330,8 +345,23 @@
     "\n",
     "clf.fit(X_train, y_train,\n",
     "        eval_set=[(X_train, y_train), (X_val, y_val)],\n",
-    "        callbacks=[lgbm.early_stopping(stopping_rounds=100, verbose=True), lgbm.log_evaluation(10)])\n",
-    "\n",
+    "        callbacks=[lgbm.early_stopping(stopping_rounds=100, verbose=True), lgbm.log_evaluation(10)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST_AUC=0.5587379464277206\n"
+     ]
+    }
+   ],
+   "source": [
     "y_pred = clf.predict(X_test)\n",
     "score = roc_auc_score(y_test, y_pred)\n",
     "print(f'TEST_AUC={score}')"
@@ -339,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +378,7 @@
        "[Text(0.5, 23.52222222222222, 'Pred'), Text(50.722222222222214, 0.5, 'True')]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -371,16 +401,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x22c2d9e0910>]"
+       "[<matplotlib.lines.Line2D at 0x26a28dfda10>]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -408,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -571,27 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"importance\":{\"jockey\":637,\"horse_trainer\":437,\"horse_owner\":405,\"horse_weight\":356,\"id\":267,\"day_of_year\":189,\"race_name\":188,\"date_sin\":151,\"date_cos\":135,\"difference_weight\":129,\"number_of_entries\":128,\"age\":128,\"race_start\":124,\"sex_and_age\":111,\"horse_order\":108,\"burden_weight\":77,\"box\":58,\"race_place\":38,\"race_distance\":38,\"race_state\":19,\"race_weather\":17,\"race_course\":9,\"sex\":1}}'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "importance.to_json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +610,7 @@
        "<Axes: title={'center': 'Feature importance'}, xlabel='Feature importance', ylabel='Features'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -621,36 +631,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
     "\n",
     "\n",
-    "HOST = os.environ.get('MONGO_HOST')\n",
-    "PORT = int(os.environ.get('MONGO_PORT'))\n",
-    "USERNAME = os.environ.get('MONGO_USER_NAME')\n",
-    "PASSWORD = os.environ.get('MONGO_PASSWORD')\n",
+    "# HOST = os.environ.get('MONGO_HOST')\n",
+    "# PORT = int(os.environ.get('MONGO_PORT'))\n",
+    "# USERNAME = os.environ.get('MONGO_USER_NAME')\n",
+    "# PASSWORD = os.environ.get('MONGO_PASSWORD')\n",
     "DB_NAME = os.environ.get('MONGO_DB_NAME')\n",
-    "VER = 0.0\n",
+    "CON_URL = os.environ.get('MONGO_ATLAS')\n",
     "\n",
-    "client = MongoClient(host=HOST, port=PORT)\n",
-    "today = str(dt.date.today())"
+    "version = 0.0\n",
+    "today = str(dt.date.today())\n",
+    "\n",
+    "client = MongoClient(CON_URL)\n",
+    "db = client[DB_NAME]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x22c2c1a7100>"
+       "<pymongo.results.InsertManyResult at 0x26a281c5030>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,23 +672,23 @@
     "db = client[DB_NAME]\n",
     "collection = db['Test_AUC']\n",
     "test_auc = [\n",
-    "    {'ver': VER, 'score': score, 'create': today}\n",
+    "    {'version': version, 'score': score, 'create': today}\n",
     "]\n",
     "collection.insert_many(test_auc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x22c0631b1f0>"
+       "<pymongo.results.InsertManyResult at 0x26a23cbc520>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,23 +699,23 @@
     "db = client[DB_NAME]\n",
     "collection = db['importance']\n",
     "importance_value = [\n",
-    "    {'ver': VER, 'importance': importance_json, 'create': today}\n",
+    "    {'version': version, 'importance': importance_json, 'create': today}\n",
     "]\n",
     "collection.insert_many(importance_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x22c2c1a7610>"
+       "<pymongo.results.InsertManyResult at 0x26a26345e70>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,23 +731,23 @@
     "db = client[DB_NAME]\n",
     "collection = db['confusion_matrix']\n",
     "confusion_matrix = [\n",
-    "    {'ver': VER, 'TP': TP, 'FP': FP, 'FN': FN, 'TN': TN, 'FPR': FPR,'TPR': TPR, 'create': today}\n",
+    "    {'version': version, 'TP': TP, 'FP': FP, 'FN': FN, 'TN': TN, 'FPR': FPR,'TPR': TPR, 'AUC': score, 'create': today}\n",
     "]\n",
     "collection.insert_many(confusion_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x22c2d1cfa60>"
+       "<pymongo.results.InsertManyResult at 0x26a24427ca0>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,23 +758,23 @@
     "db = client[DB_NAME]\n",
     "collection = db['train_data']\n",
     "train_data = [\n",
-    "    {'ver': VER, 'train_data': train_data_json, 'create': today}\n",
+    "    {'version': version, 'train_data': train_data_json, 'create': today}\n",
     "]\n",
     "collection.insert_many(train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x22c2c1a75b0>"
+       "<pymongo.results.InsertManyResult at 0x26a245dfe50>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,23 +785,23 @@
     "db = client[DB_NAME]\n",
     "collection = db['val_data']\n",
     "val_data = [\n",
-    "    {'ver': VER, 'val_data': val_data_json, 'create': today}\n",
+    "    {'version': version, 'val_data': val_data_json, 'create': today}\n",
     "]\n",
     "collection.insert_many(val_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x22c2c1a5e10>"
+       "<pymongo.results.InsertManyResult at 0x26a236ff0a0>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,10 +812,42 @@
     "db = client[DB_NAME]\n",
     "collection = db['test_data']\n",
     "test_data = [\n",
-    "    {'ver': VER, 'test_data': test_data_json, 'create': today}\n",
+    "    {'version': version, 'test_data': test_data_json, 'create': today}\n",
     "]\n",
     "collection.insert_many(test_data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertManyResult at 0x26a263472e0>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db = client[DB_NAME]\n",
+    "collection = db['memo']\n",
+    "memo = [\n",
+    "    {'version': version, 'memo': 'End of learning', 'create': today}\n",
+    "]\n",
+    "collection.insert_many(memo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
